# content-app

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  nginx.conf  pyproject.toml  supervisord.conf
.github/workflows/: deploy.yml
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/api/: brand.ts  runs.ts
frontend/src/components/: ContentPanel.tsx  PipelineNode.tsx  PipelineVisualizer.tsx  RunForm.tsx  StatusBadge.tsx
frontend/src/hooks/: usePipelineNodes.ts  useRunPipeline.ts
frontend/src/lib/: constants.ts
frontend/src/pages/: BrandPage.tsx  HistoryPage.tsx  PipelinePage.tsx
frontend/src/types/: brand.ts  pipeline.ts
src/: main.py
src/content_app/: cli.py  config.py  runner.py
src/content_app/agent/: __init__.py  executor.py  handlers.py  tools.py
src/content_app/api/: __init__.py  app.py  routes_brand.py  routes_runs.py  schemas.py
src/content_app/db/: sqlite.py
src/content_app/graph/: builder.py  nodes.py  state.py
src/content_app/mcp/: brandvoice.py
src/content_app/providers/: __init__.py  claude.py  openai.py  protocol.py
tests/: conftest.py  test_agent_executor.py  test_agent_handlers.py  test_api.py  test_config.py  test_db.py  test_graph.py  test_mcp.py  test_providers.py  test_runner.py
